# sProx

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
config/: routes.yaml
docs/: architecture-overview.md  debrid-only-guide.md  operational-notes.md
packagers/: README.md  ffmpeg_packager.sh  shaka_packager.sh
scripts/: clippy.sh  docker-run.sh  fmt.sh
src/: app.rs  bandwidth.rs  config.rs  integration_tests.rs  ip.rs  lib.rs  main.rs  proxy.rs  retry.rs  routing.rs  security.rs  state.rs  telemetry.rs  util.rs
src/proxy/: classify.rs  headers.rs  mime.rs  mod.rs  redirect.rs  ssrf.rs
src/stream/: convert.rs  dash.rs  direct.rs  hls.rs  mod.rs
tests/: cli.rs  reload.rs  tls.rs
tests/fixtures/tls/: cert.pem  key.pem
