[package]
name = "sProx"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "http-proxy",
    "config-loader",
    "telemetry",
]

# Enable core HTTP proxy stack built on Axum/Tower.
http-proxy = [
    "dep:axum",
    "dep:tower",
    "dep:hyper",
    "dep:reqwest",
]

# Enable configuration serialization/deserialization helpers.
config-loader = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:config",
]

# Enable tracing/observability stack.
telemetry = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tower-http",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
]

# Feature flag placeholders for upcoming media tooling.
streaming-hls = ["dep:bytes"]
streaming-dash = []

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "macros", "tokio", "query", "original-uri"], optional = true }
bytes = { version = "1.5", optional = true }
config = { version = "0.13", default-features = false, features = ["yaml", "toml"], optional = true }
futures = "0.3"
globset = "0.4"
hyper = { version = "0.14", features = ["full"], optional = true }
reqwest = { version = "=0.11.26", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
aes-gcm = { version = "0.10", features = ["aes"], optional = false }
base64 = "0.21"
hmac = "0.12"
ipnet = "2.9"
rand = "0.8"
roxmltree = "0.19"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal", "process"] }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }
tracing = { version = "0.1", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"], optional = true }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", default-features = false, optional = true }
url = "=2.4.1"
dotenvy = "0.15"
sha2 = "0.10"
subtle = "2.5"
uuid = { version = "1", features = ["std"] }

[dev-dependencies]
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
tokio = { version = "1.38", features = ["macros", "rt"] }

